add product mapped orderDetail etc